# Zico_SWAP

./: .gitignore  Dockerfile  docker_projection.sh  pyproject.toml
ImageNet_MBV2/: .gitignore  evolution_search_others.py
ImageNet_MBV2/DataLoader/: __init__.py
ImageNet_MBV2/ZeroShotProxy/: compute_swap.py  compute_swap_3sigma.py  compute_swap_backup.py
ImageNet_MBV2/datasets/: get_dataset_with_transform.py
ImageNet_MBV2/scripts/: search_AZ-NAS_flops450M-bs64_CIFAR10.sh  search_AZ-NAS_flops450M-bs64_backup.sh  swap.sh  swap_backup.sh  train_AZ-NAS_flops1G-150ep-bs64x8.sh  train_AZ-NAS_flops450M-150ep-bs64x8_CIFAR10.sh  train_AZ-NAS_flops450M-150ep-bs64x8_backup.sh  train_swap.sh  train_swap_150ep.sh
MBV2_NAS/: gridsearch_parallel.sh  run_grid_search.sh
MBV2_NAS/src/: original_code_new_searchingspace.py  original_code_new_searchingspace_0611.py  original_code_new_searchingspace_CIFAR100.py  search_imagenet.py  search_train.py  train_imagenet_nas.py
MBV2_NAS/src/tools/: es.py  evaluation.py  loader.py  mbv2_searchspace.py  sawp.py  trainer.py  transform.py
cifar10_MBV2/src/: 01_search_aznas.py  02_search_power_added.py  03_swap_hwnas_search.py  check_az_nas_mbv2_speed.py  check_swap_mbv2_speed.py  mobilenetv2.py  searchspace.py  train_cifar10.py  train_cifar100.py  train_imagenet.py
cifar10_MBV2/src/test_az_nas/: compute_az_nas_score.py  test_grad.py
cifar10_MBV2/test/: test_pyjoules.py
